k3s/infrastructure/monitoring/prometheus-stack/alertmanager.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-dashboard
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`alerts.vextech.dev`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
    middlewares:
      - name: local-no-auth
        namespace: route
  tls: {}
